Add wholesaler message sending

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "../scaffolding/vendor/bs/js/dropdown.js",
     "../scaffolding/vendor/jquery.colorbox-min.js",
     "../scaffolding/shoptet/js/shoptet.js",
+    "_js/wholesaler-message.js",
     "_js/main.js"
   ]
 }
