--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "../scaffolding/vendor/bs/js/collapse.js",
     "../scaffolding/vendor/jquery.colorbox-min.js",
     "../scaffolding/shoptet/js/shoptet.js",
+    "_js/wholesaler-location.js",
     "_js/wholesaler-message.js",
     "_js/filters.js",
     "_js/main.js"
