--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "_js/filters.js",
     "_js/search-form.js",
     "_js/block-ellipsis.js",
+    "_js/collapse-anchor.js",
     "_js/main.js"
   ],
-  "dependencies": {
-  }
+  "loginScreenJS": "_js/login-screen.js",
+  "wholesalerAutofillJS": "_js/wholesaler-autofill.js",
+  "dependencies": {}
 }
